# src/inspect_scout/_view/www/src/api/api-scout-server.ts
@@ -1,6 +1,5 @@
 import { decompress as decompressZstd } from "fzstd";
 
-import { ScanResultInputData, Input, InputType } from "../app/types";
 import type { Condition, OrderByModel } from "../query";
 import {
   ActiveScansResponse,
@@ -12,6 +11,8 @@ import {
   ProjectConfigInput,
   RawEncoding,
   ScanJobConfig,
+  ScannerInput,
+  ScannerInputResponse,
   ScannersResponse,
   ScansResponse,
   Status,
@@ -26,6 +27,7 @@ import { asyncJsonParse } from "../utils/json-worker";
 
 import { NoPersistence, ScoutApiV2, ScalarValue, TopicVersions } from "./api";
 import { resolveAttachments } from "./attachmentsHelpers";
+import { expandInputEvents } from "./expandInputEvents";
 import { serverRequestApi } from "./request";
 
 export type HeaderProvider = () => Promise<Record<string, string>>;
@@ -230,29 +232,23 @@ export const apiScoutServer = (
       scanPath: string,
       scanner: string,
       uuid: string
-    ): Promise<ScanResultInputData> => {
-      // Fetch the data
-      const response = await requestApi.fetchType<Input>(
-        "GET",
-        `/scans/${encodeBase64Url(scansDir)}/${encodeBase64Url(scanPath)}/${encodeURIComponent(scanner)}/${encodeURIComponent(uuid)}/input`
+    ): Promise<ScannerInput> => {
+      const result = await asyncJsonParse<ScannerInputResponse>(
+        (
+          await requestApi.fetchString(
+            "GET",
+            `/scans/${encodeBase64Url(scansDir)}/${encodeBase64Url(scanPath)}/${encodeURIComponent(scanner)}/${encodeURIComponent(uuid)}/input`
+          )
+        ).raw
       );
-      const input = response.parsed;
-
-      // Read header to determine the input type
-      const inputType = response.headers.get("X-Input-Type");
-      if (!inputType) {
-        throw new Error("Missing input type from server");
-      }
-      if (
-        !["transcript", "message", "messages", "event", "events"].includes(
-          inputType
-        )
-      ) {
-        throw new Error(`Unknown input type from server: ${inputType}`);
-      }
-
-      // Return the DataFrameInput
-      return { input, inputType: inputType as InputType };
+      return {
+        input_type: result.input_type,
+        input: expandInputEvents(
+          result.input,
+          result.input_type,
+          result.input_data
+        ),
+      };
     },
     getActiveScans: async (): Promise<ActiveScansResponse> =>
       asyncJsonParse<ActiveScansResponse>(
